--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=1632
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Put' dolzhen byt' bez russkih simvolov, inache vydast oshibku
+upload.path = C:/_SpringShopUpload
