Предварительная аттестация - Spring. функции: - регистрация, аутентификация, авторизация;
Незарегистр. пользователям доступен просмотр товаров и поиск по товарам;

Зарегистрированным пользователям доступно:
- просмотр товаров, поиск товаров;
- добавление, удаление товаров в корзину; просмотр корзины;
- оформление и просмотр оформленных заказов;
- выход из ЛК;

Администратору доступно:
- просмотр товаров, подробная инфа о товаре, поиск товаров, сортировка;
- добавление новых товаров;
- просмотр заказов, изменение статуса заказа, поиск заказов (по последним символам в названии);
- просмотр всех пользователей, изменение роли пользователя
-выход из ЛК;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/FinalProject_Shop
 spring.datasource.username=postgres
 spring.datasource.password=1632
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Put' dolzhen byt' bez russkih simvolov, inache vydast oshibku
